PR/48908: Cannot open /dev/uhid? when another report id at the same uhidev was already opened.

Restore the sc reference counting lost in usbmp merge.